www/css/themes/_custom.scss
html {
  position: relative;
  min-height: 100%;
}

body {
  display: flex;
  flex-direction: column;
  min-height: 100vh;

  > .container {
    flex: 1 0 auto;
  }
}

[ng-click] {
  cursor: pointer;
}

.footer {
  bottom: 0;
  flex-shrink: 0;
  width: 100%;
  padding-top: 20px;
}

.breadcrumbNav {
  width: 100%;
  line-height: 1;
  border-top: $border-color;
}

.breadcrumbList {
  padding: 5px 15px;
  list-style: none;
}

.breadcrumbListLink {
  display: inline;
  font-size: .9em;

  a {
    color: $link-color;

    &:hover {
      color: $link-hover-color;
    }

    .active {
      color: $white;
    }
  }

  &:not(:first-child)::before {
    content: " > ";
  }
}

.categoryList {
  height: 100%;
  padding-left: 20px;
  font-size: 1.1em;
  list-style: none;

  li {
    a {
      &:hover {
        text-decoration: none;
      }

      .active {
        color: $link-color;
      }
    }

    ul {
      padding-left: 20px;
      font-size: .9em;
      list-style: none;
    }
  }
}

.clickable {
  cursor: pointer;
}

.rounded-top-0 {
  border-top-left-radius: 0 !important;
  border-top-right-radius: 0 !important;
}
.rounded-bottom-0 {
  border-bottom-right-radius: 0 !important;
  border-bottom-left-radius: 0 !important;
}
.rounded-left-0 {
  border-top-left-radius: 0 !important;
  border-bottom-left-radius: 0 !important;
}
.rounded-right-0 {
  border-top-right-radius: 0 !important;
  border-bottom-right-radius: 0 !important;
}

.dropdown-toggle-no-caret::after {
  display: none;
}

@media (min-width: 768px) {
  .modal-xl {
    width: 90%;
    max-width: 1800px;
  }
}

@media (max-width: 767px) {
  .categoryListContainer {
    position: fixed;
    top: 0;
    bottom: 0;
    left: -250px;
    z-index: 100;
    width: 250px;
    padding: 15px;
    background-color: $gray-800 !important;

    .active {
      left: 0;
      @include transition(all 150ms linear);
    }

    h2 {
      color: $white !important;
    }
  }
}

